# tester

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tester.h  tester_assert.h
example/: main.c  main.cpp  test_one.h  test_xyz.h
